-
Bug
-
Resolution: Done
-
P1: Critical
-
5.15
-
Ubuntu 18.04
-
f1d2a49c747e69938f9f878f64620d7d6fc61b41 (qt/tqtc-qtlocation/tqtc/lts-5.15) 4bcacd0dc8f73de7b9e5e5f5fa2129fd88bdff3b (qt/qtlocation/dev)
Trying to add a no-opengl build to 5.15 and ended up with this build error:
agent:2020/10/29 06:32:28 build.go:379: g++ -c -include .pch/Qt5Location -pipe -g -std=c++1z -fvisibility=hidden -fvisibility-inlines-hidden -fno-exceptions -Wall -Wextra -Wvla -Wdate-time -Wshift-overflow=2 -Wduplicated-cond -Wno-stringop-overflow -Wno-format-overflow -Werror -Wno-error=cpp -Wno-error=deprecated-declarations -Wno-error=strict-overflow -D_REENTRANT -fPIC -DQT_NO_LINKED_LIST -DQT_NO_JAVA_STYLE_ITERATORS -DQT_NO_LINKED_LIST -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_BUILD_LOCATION_LIB -DQT_BUILDING_QT -DQT_NO_CAST_TO_ASCII -DQT_ASCII_CAST_WARNINGS -DQT_MOC_COMPAT -DQT_USE_QSTRINGBUILDER -DQT_DEPRECATED_WARNINGS -DQT_DISABLE_DEPRECATED_BEFORE=0x050000 -DQT_DEPRECATED_WARNINGS_SINCE=0x060000 -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_POSITIONINGQUICK_LIB -DQT_POSITIONING_LIB -DQT_QUICK_LIB -DQT_GUI_LIB -DQT_QMLMODELS_LIB -DQT_QML_LIB -DQT_NETWORK_LIB -DQT_CORE_LIB -I. -I../3rdparty/earcut -I../3rdparty/poly2tri -I../3rdparty/clipper -I../3rdparty/clip2tri -I../positioning -I../imports/positioning -I. -Imaps -Iplaces -Ideclarativemaps -Ideclarativeplaces -Ilabs -I../../include -I../../include/QtLocation -I../../include/QtLocation/5.15.2 -I../../include/QtLocation/5.15.2/QtLocation -I../../include/QtPositioningQuick/5.15.2 -I../../include/QtPositioningQuick/5.15.2/QtPositioningQuick -I../../include/QtPositioning/5.15.2 -I../../include/QtPositioning/5.15.2/QtPositioning -I../../include/QtPositioningQuick -I../../include/QtPositioning -I/home/qt/work/install/include/QtQuick/5.15.2 -I/home/qt/work/install/include/QtQuick/5.15.2/QtQuick -I/home/qt/work/install/include/QtGui/5.15.2 -I/home/qt/work/install/include/QtGui/5.15.2/QtGui -I/home/qt/work/install/include/QtQmlModels/5.15.2 -I/home/qt/work/install/include/QtQmlModels/5.15.2/QtQmlModels -I/home/qt/work/install/include/QtQml/5.15.2 -I/home/qt/work/install/include/QtQml/5.15.2/QtQml -I/home/qt/work/install/include/QtCore/5.15.2 -I/home/qt/work/install/include/QtCore/5.15.2/QtCore -I/home/qt/work/install/include -I/home/qt/work/install/include/QtQuick -I/home/qt/work/install/include/QtGui -I/home/qt/work/install/include/QtQmlModels -I/home/qt/work/install/include/QtQml -I/home/qt/work/install/include/QtNetwork -I/home/qt/work/install/include/QtCore -I.moc -I/home/qt/openssl-1.1.1g/include -I/home/qt/work/install/mkspecs/linux-g++ -o .obj/qdeclarativepolylinemapitem.o declarativemaps/qdeclarativepolylinemapitem.cpp agent:2020/10/29 06:32:30 build.go:379: In file included from declarativemaps/qdeclarativepolylinemapitem.cpp:38: agent:2020/10/29 06:32:30 build.go:379: declarativemaps/qdeclarativepolylinemapitem_p_p.h:381:17: error: ‘const char* MapPolylineShaderLineStrip::vertexShader() const’ marked ‘override’, but does not override agent:2020/10/29 06:32:30 build.go:379: 381 | const char *vertexShader() const override { agent:2020/10/29 06:32:30 build.go:379: | ^~~~~~~~~~~~ agent:2020/10/29 06:32:30 build.go:379: declarativemaps/qdeclarativepolylinemapitem_p_p.h:397:17: error: ‘const char* MapPolylineShaderLineStrip::fragmentShader() const’ marked ‘override’, but does not override agent:2020/10/29 06:32:30 build.go:379: 397 | const char *fragmentShader() const override { agent:2020/10/29 06:32:30 build.go:379: | ^~~~~~~~~~~~~~ agent:2020/10/29 06:32:30 build.go:379: declarativemaps/qdeclarativepolylinemapitem_p_p.h: In member function ‘virtual void MapPolylineShaderLineStrip::initialize()’: agent:2020/10/29 06:32:30 build.go:379: declarativemaps/qdeclarativepolylinemapitem_p_p.h:411:23: error: ‘program’ was not declared in this scope agent:2020/10/29 06:32:30 build.go:379: 411 | m_matrix_id = program()->uniformLocation("qt_Matrix"); agent:2020/10/29 06:32:30 build.go:379: | ^~~~~~~ agent:2020/10/29 06:32:30 build.go:379: declarativemaps/qdeclarativepolylinemapitem_p_p.h: At global scope: agent:2020/10/29 06:32:30 build.go:379: declarativemaps/qdeclarativepolylinemapitem_p_p.h:435:17: error: ‘const char* MapPolylineShaderExtruded::vertexShader() const’ marked ‘override’, but does not override agent:2020/10/29 06:32:30 build.go:379: 435 | const char *vertexShader() const override agent:2020/10/29 06:32:30 build.go:379: | ^~~~~~~~~~~~ agent:2020/10/29 06:32:30 build.go:379: declarativemaps/qdeclarativepolylinemapitem_p_p.h:440:17: error: ‘const char* MapPolylineShaderExtruded::fragmentShader() const’ marked ‘override’, but does not override agent:2020/10/29 06:32:30 build.go:379: 440 | const char *fragmentShader() const override agent:2020/10/29 06:32:30 build.go:379: | ^~~~~~~~~~~~~~ agent:2020/10/29 06:32:30 build.go:379: declarativemaps/qdeclarativepolylinemapitem_p_p.h: In member function ‘virtual void MapPolylineShaderExtruded::initialize()’: agent:2020/10/29 06:32:30 build.go:379: declarativemaps/qdeclarativepolylinemapitem_p_p.h:455:23: error: ‘program’ was not declared in this scope agent:2020/10/29 06:32:30 build.go:379: 455 | m_matrix_id = program()->uniformLocation("qt_Matrix"); agent:2020/10/29 06:32:30 build.go:379: | ^~~~~~~ agent:2020/10/29 06:32:30 build.go:379: In file included from ../../include/QtLocation/5.15.2/QtLocation/private/qdeclarativepolygonmapitem_p_p.h:1, agent:2020/10/29 06:32:30 build.go:379: from declarativemaps/qdeclarativerectanglemapitem_p_p.h:53, agent:2020/10/29 06:32:30 build.go:379: from declarativemaps/qdeclarativepolylinemapitem.cpp:39: agent:2020/10/29 06:32:30 build.go:379: ../../include/QtLocation/5.15.2/QtLocation/private/../../../../../src/location/declarativemaps/qdeclarativepolygonmapitem_p_p.h: At global scope: agent:2020/10/29 06:32:30 build.go:379: ../../include/QtLocation/5.15.2/QtLocation/private/../../../../../src/location/declarativemaps/qdeclarativepolygonmapitem_p_p.h:152:17: error: ‘const char* MapPolygonShader::vertexShader() const’ marked ‘override’, but does not override agent:2020/10/29 06:32:30 build.go:379: 152 | const char *vertexShader() const override { agent:2020/10/29 06:32:30 build.go:379: | ^~~~~~~~~~~~ agent:2020/10/29 06:32:30 build.go:379: ../../include/QtLocation/5.15.2/QtLocation/private/../../../../../src/location/declarativemaps/qdeclarativepolygonmapitem_p_p.h:168:17: error: ‘const char* MapPolygonShader::fragmentShader() const’ marked ‘override’, but does not override agent:2020/10/29 06:32:30 build.go:379: 168 | const char *fragmentShader() const override { agent:2020/10/29 06:32:30 build.go:379: | ^~~~~~~~~~~~~~ agent:2020/10/29 06:32:30 build.go:379: ../../include/QtLocation/5.15.2/QtLocation/private/../../../../../src/location/declarativemaps/qdeclarativepolygonmapitem_p_p.h: In member function ‘virtual void MapPolygonShader::initialize()’: agent:2020/10/29 06:32:30 build.go:379: ../../include/QtLocation/5.15.2/QtLocation/private/../../../../../src/location/declarativemaps/qdeclarativepolygonmapitem_p_p.h:186:23: error: ‘program’ was not declared in this scope agent:2020/10/29 06:32:30 build.go:379: 186 | m_matrix_id = program()->uniformLocation("qt_Matrix"); agent:2020/10/29 06:32:30 build.go:379: | ^~~~~~~ agent:2020/10/29 06:32:30 build.go:379: declarativemaps/qdeclarativepolylinemapitem.cpp: In member function ‘virtual void MapPolylineShaderLineStrip::updateState(const QSGMaterialShader::RenderState&, QSGMaterial*, QSGMaterial*)’: agent:2020/10/29 06:32:30 build.go:379: declarativemaps/qdeclarativepolylinemapitem.cpp:1552:9: error: ‘program’ was not declared in this scope agent:2020/10/29 06:32:30 build.go:379: 1552 | program()->setUniformValue(m_color_id, v); agent:2020/10/29 06:32:30 build.go:379: | ^~~~~~~ agent:2020/10/29 06:32:30 build.go:379: declarativemaps/qdeclarativepolylinemapitem.cpp:1557:9: error: ‘program’ was not declared in this scope agent:2020/10/29 06:32:30 build.go:379: 1557 | program()->setUniformValue(m_matrix_id, state.projectionMatrix()); agent:2020/10/29 06:32:30 build.go:379: | ^~~~~~~ agent:2020/10/29 06:32:30 build.go:379: declarativemaps/qdeclarativepolylinemapitem.cpp:1560:5: error: ‘program’ was not declared in this scope agent:2020/10/29 06:32:30 build.go:379: 1560 | program()->setUniformValue(m_mapProjection_id, geoProjection); agent:2020/10/29 06:32:30 build.go:379: | ^~~~~~~ agent:2020/10/29 06:32:30 build.go:379: declarativemaps/qdeclarativepolylinemapitem.cpp: In member function ‘virtual void MapPolylineShaderExtruded::updateState(const QSGMaterialShader::RenderState&, QSGMaterial*, QSGMaterial*)’: agent:2020/10/29 06:32:30 build.go:379: declarativemaps/qdeclarativepolylinemapitem.cpp:1768:9: error: ‘program’ was not declared in this scope agent:2020/10/29 06:32:30 build.go:379: 1768 | program()->setUniformValue(m_color_id, v); agent:2020/10/29 06:32:30 build.go:379: | ^~~~~~~ agent:2020/10/29 06:32:30 build.go:379: declarativemaps/qdeclarativepolylinemapitem.cpp:1773:9: error: ‘program’ was not declared in this scope agent:2020/10/29 06:32:30 build.go:379: 1773 | program()->setUniformValue(m_matrix_id, state.projectionMatrix()); agent:2020/10/29 06:32:30 build.go:379: | ^~~~~~~ agent:2020/10/29 06:32:30 build.go:379: declarativemaps/qdeclarativepolylinemapitem.cpp:1777:5: error: ‘program’ was not declared in this scope agent:2020/10/29 06:32:30 build.go:379: 1777 | program()->setUniformValue(m_mapProjection_id, geoProjection); agent:2020/10/29 06:32:30 build.go:379: | ^~~~~~~
- is duplicated by
-
QTBUG-82330 [REGRESSION] QtLocation does not build without OpenGL
-
- Closed
-
- is required for
-
QTQAINFRA-3407 Bring back no-opengl verification in the CI
-
- Closed
-