Fix compilation for no opengl builds

Disables experimental labs qml plugin, which
since a4469cad40 depends heavily on opengl backend.

Fix warnings with msvc when compiling without experimental
plugin.

Fixes: QTBUG-88017
Change-Id: I53c5da915981bd05f39134ba57f585d0a0786aa8
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Alex Blasche <alexander.blasche@qt.io>