src/location/declarativemaps/qdeclarativepolylinemapitem_p.h
@@ -97,8 +97,10 @@ class Q_LOCATION_PRIVATE_EXPORT QDeclarativePolylineMapItem : public QDeclarativ
 public:
     enum Backend {
         Software = 0,
+#if QT_CONFIG(opengl)
         OpenGLLineStrip = 1,
         OpenGLExtruded = 2,
+#endif
     };
 
     explicit QDeclarativePolylineMapItem(QQuickItem *parent = 0);
